--- a/evotingmobile/app/build.gradle
+++ b/evotingmobile/app/build.gradle
@@ -26,6 +26,7 @@ android {
 }
 
 dependencies {
+    api 'com.google.android.material:material:1.3.0-alpha01'
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -34,19 +35,19 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.3.0'
     implementation 'androidx.navigation:navigation-ui:2.3.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.work:work-runtime:2.2.0'
+    implementation 'androidx.work:work-runtime:2.3.4'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    compileOnly "org.projectlombok:lombok:1.18.6"
+    compileOnly 'org.projectlombok:lombok:1.18.6'
     annotationProcessor 'org.projectlombok:lombok:1.18.6'
     implementation group: 'org.slf4j', name: 'slf4j-android', version: '1.7.21'
-
-    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
-    implementation "com.squareup.retrofit2:converter-gson:2.3.0"
-
+    implementation group: 'com.squareup.retrofit2', name: 'adapter-rxjava', version: '2.9.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.4.0'
-    implementation 'com.squareup.okhttp3:okhttp:3.14.1'
-    implementation 'com.google.code.gson:gson:2.8.0'
-
+    implementation 'com.squareup.okhttp3:okhttp:3.14.9'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'androidx.core:core:1.3.0'
+    implementation 'androidx.core:core-ktx:1.3.0'
 }
