--- a/evotingmobile/app/src/main/AndroidManifest.xml
+++ b/evotingmobile/app/src/main/AndroidManifest.xml
@@ -3,10 +3,12 @@
     package="com.example.e_voting_mobile">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -19,6 +21,11 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".voting_history.HistoryActivity"
+            android:label="Voting history"
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
     </application>
 
