--- a/evotingmobile/app/build.gradle
+++ b/evotingmobile/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "30.0.0"
+    buildToolsVersion "30.0.1"
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -19,7 +19,6 @@ android {
 
     buildTypes {
         release {
-            debuggable false
             // Enables code shrinking, obfuscation, and optimization for only
             // your project's release build type.
             minifyEnabled true
@@ -43,6 +42,7 @@ android {
 }
 
 dependencies {
+
     api 'com.google.android.material:material:1.3.0-alpha01'
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -69,7 +69,14 @@ dependencies {
     implementation 'androidx.core:core:1.3.0'
     implementation 'androidx.core:core-ktx:1.3.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.0.1'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
     implementation "androidx.recyclerview:recyclerview:1.1.0"
+//room
+    implementation "android.arch.persistence.room:runtime:1.1.1"
+    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
+    testImplementation "android.arch.persistence.room:testing:1.1.1"
 
+    implementation 'com.android.support:support-annotations:28.0.0'
+    implementation 'com.android.support:support-v4:26.1.0'
 }
